--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2"
+    "react-tsparticles": "^2.9.3",
+    "tailwindcss": "^3.3.2",
+    "tsparticles": "^2.9.3"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
