--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-tsparticles": "^2.9.3",
     "tailwindcss": "^3.3.2",
     "tsparticles": "^2.9.3"
