--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "deploy": "next build && npx gh-pages -d out --branch=gh-pages",
@@ -17,10 +17,10 @@
   "homepage": "https://jzinno.github.io/",
   "dependencies": {
     "autoprefixer": "^10.4.14",
-    "next": "^14.2.21",
+    "next": "15.4.2",
     "postcss": "^8.4.24",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-icons": "^4.11.0",
     "react-tsparticles": "^2.9.3",
     "tailwindcss": "^3.3.2",
@@ -28,8 +28,11 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
-    "@types/react": "^18.2.7",
+    "@types/react": "19.1.8",
     "gh-pages": "^5.0.0",
     "typescript": "^5.0.4"
+  },
+  "overrides": {
+    "@types/react": "19.1.8"
   }
 }
