--- a/package.json
+++ b/package.json
@@ -16,23 +16,25 @@
   "license": "ISC",
   "homepage": "https://jzinno.github.io/",
   "dependencies": {
-    "autoprefixer": "^10.4.14",
-    "next": "15.5.2",
-    "postcss": "^8.4.24",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "react-icons": "^4.11.0",
-    "react-tsparticles": "^2.9.3",
-    "tailwindcss": "^3.3.2",
-    "tsparticles": "^2.9.3"
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "autoprefixer": "^10.4.22",
+    "next": "^16.0.3",
+    "postcss": "^8.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4.1.17",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
-    "@types/node": "^20.2.5",
-    "@types/react": "19.1.12",
-    "gh-pages": "^5.0.0",
-    "typescript": "^5.0.4"
+    "@types/node": "^24.10.1",
+    "@types/react": "19.2.6",
+    "gh-pages": "^6.3.0",
+    "typescript": "^5.9.3"
   },
   "overrides": {
-    "@types/react": "19.1.12"
+    "@types/react": "19.2.6"
   }
 }
