--- a/.github/workflows/CI-deploy.yml
+++ b/.github/workflows/CI-deploy.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: "22"
+          bun-version: latest
       - name: Install dependencies
         run: |
-          npm ci
-          npm run build
+          bun install
+          bun run build
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
